--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <div class="container">
         <div class="header">
             <h1 class="text-3xl font-extrabold text-gray-900">Eylül 2025 Öğretim Yılına Girerken En Çok Alıntıya Sahip Patoloji Uzmanları</h1>
-            <p class="mt-2 text-gray-600">Bu liste, sağladığınız Google Akademik verilerine göre oluşturulmuştur.</p>
+            <p class="mt-2 text-gray-600">Bu liste, Google Scholar verilerine göre oluşturulmuştur.</p>
         </div>
 
         <div class="ranking-list">
