--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eylül 2025-26 Öğretim Yılına Girerken En Çok Alıntıya Sahip Patoloji Uzmanları</title>
+    <title>2025-26 Öğretim Yılına Girerken En Çok Alıntıya Sahip Patoloji Uzmanları</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         body {
