--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
         <div class="note">
             <p>Kaynak: Google Scholar 23.09.2025</p>
-            <p>Bu liste, sağlanan metindeki atıf sayılarına göre sıralanmıştır ve dinamik bir bağlantı içermemektedir.</p>
+            <p>Bu liste,  Google Scholar  "Patoloji" kelimesi ile sağlanan atıf sayılarına göre sıralanmıştır ve dinamik bir bağlantı içermemektedir.</p>
         </div>
     </div>
 
