--- a/index.html
+++ b/index.html
@@ -147,9 +147,9 @@
             { name: "Funda Yılmaz", institution: "Ege Üniversitesi Tıp Fakültesi", citations: 3401 },
             { name: "Pelin Bağcı", institution: "Marmara Üniversitesi Tıp Fakültesi Patoloji", citations: 3340 },
             { name: "Kemal Deniz", institution: "Erciyes University", citations: 3133 },
-            { name: "Murat Alper", institution: "Sağlık Bilimleri Üniversitesi, Ankara Etlik Şehir Hastanesi", citations: 3211 }, // Updated order based on citations
+            { name: "Murat Alper", institution: "Sağlık Bilimleri Üniversitesi, Ankara Etlik Şehir Hastanesi", citations: 3211 }, 
+            { name: "Ozlem Erdem", institution: "Gazi University", citations: 2697 },
             { name: "Özlem Yapıcıer", institution: "Bahçeşehir Üniversitesi Tıp Fakültesi", citations: 2693 },
-            { name: "Ozlem Erdem", institution: "Gazi University", citations: 2697 }, // Updated order based on citations
             { name: "Osman Zekioglu", institution: "Ege Üniversitesi Tıp Fakültesi Tıbbi Patoloji", citations: 2687 },
             { name: "Enver Vardar", institution: "Patoloji", citations: 2612 },
             { name: "Buyukbabani Nesimi", institution: "İstanbul Üniversitesi İstanbul Tıp Fakültesi Patoloji", citations: 2517 },
@@ -162,7 +162,6 @@
             { name: "Şahsine Tolunay", institution: "Uludağ Üniversitesi Tıp Fakültesi", citations: 1942 },
             { name: "Aytekin Akyol", institution: "Hacettepe University", citations: 1869 },
             { name: "Nevra Dursun", institution: "University of Health Sciences", citations: 1851 },
-            { name: "Funda Demirag", institution: "University of Health Sciences, Atatürk Chest Diseases Chest Surgery Edu Res Hospital", citations: 1849 },
             { name: "Cenk Sokmensuer", institution: "Hacettepe University", citations: 1847 },
             { name: "Emine Turkmen Samdanci", institution: "Gazi University", citations: 1790 },
             { name: "Figen Öztürk", institution: "Erciyes Üniversitesi Patoloji", citations: 1760 },
@@ -181,7 +180,7 @@
             { name: "Cumhur İbrahim Başsorgun", institution: "Akdeniz Üniversitesi Tıp Fakültesi", citations: 1281 },
             { name: "Metin Akbulut", institution: "Pamukkale Üniversitesi", citations: 1204 },
             { name: "Burcu Tokozlu (Senguven)", institution: "Gazi University", citations: 1176 },
-            { name: "Nilüfer Onak Kandemir", institution: "Ankara Şehir Hastanesi Tıbbi Patoloji", citations: 1252 }, // Re-order
+            { name: "Nilüfer Onak Kandemir", institution: "Ankara Şehir Hastanesi Tıbbi Patoloji", citations: 1252 },
             { name: "Mine Hekimgil", institution: "Ege Üniversitesi Tıp Fakültesi, Tıbbi Patoloji", citations: 1147 },
             { name: "Fulya Oz Puyan", institution: "Trakya Üniversitesi Tıp Fakültesi Patoloji", citations: 1125 },
             { name: "Neşe Karadağ", institution: "İnönü Üniversitesi Tıp Fakültesi", citations: 1095 },
@@ -190,11 +189,11 @@
             { name: "Betül Gündoğdu", institution: "Atatürk Üniversitesi Tıp Fakültesi Tıbbi Patoloji", citations: 951 },
             { name: "Tülin Yalta", institution: "Trakya Üniversitesi Patoloji", citations: 947 },
             { name: "Mehtat Unlu", institution: "Dokuz Eylul University", citations: 917 },
-            { name: "Kayhan Başak", institution: "Sağlık Bilimleri Üniversitesi, Kartal Dr. Lütfi Kırdar Şehir Hastanesi", citations: 922 }, // Re-order
+            { name: "Kayhan Başak", institution: "Sağlık Bilimleri Üniversitesi, Kartal Dr. Lütfi Kırdar Şehir Hastanesi", citations: 922 },
             { name: "Yurdanur Sullu", institution: "Ondokuz Mayıs Üniversitesi Tıp Fakültesi Patoloji", citations: 919 },
             { name: "Mehmet Yaldız", institution: "Mersin Üniversitesi Tıp Fakültesi", citations: 911 },
             { name: "Sergülen Dervişoğlu", institution: "Medipol University", citations: 843 },
-            { name: "Gökhan Artaş", institution: "Fırat Üniversitesi Tıp Fakültesi, Patoloji", citations: 847 }, // Re-order
+            { name: "Gökhan Artaş", institution: "Fırat Üniversitesi Tıp Fakültesi, Patoloji", citations: 847 },
             { name: "Özgür İlhan Çelik", institution: "Muğla Sıtkı Koçman Üniversitesi Tıp Fakültesi", citations: 822 },
             { name: "Recep Bedir", institution: "Recep Tayyip Erdoğan Üniversitesi, Tıp Fakültesi Tıbbi Patoloji", citations: 816 },
             { name: "Sare Şipal", institution: "Atatürk Üniversitesi Tıp Fakültesi Patoloji", citations: 782 },
@@ -204,7 +203,7 @@
             { name: "Armagan Gunal", institution: "Sağlık Bilimleri Üniversitesi Tıbbi Patoloji", citations: 731 },
             { name: "Ersin Tuncer", institution: "Sivas Cumhuriyet Üniversitesi Tıp Fakültesi", citations: 667 },
             { name: "Eren Altun", institution: "Istanbul Bağcılar Training and Research Hospital", citations: 641 },
-            { name: "Nagihan Yalçın", institution: "Pamukkale Üniversitesi", citations: 651 }, // Re-order
+            { name: "Nagihan Yalçın", institution: "Pamukkale Üniversitesi", citations: 651 },
             { name: "Ünsal Han", institution: "Dışkapı Ankara YB Eğitim Araştırma Hastanesi", citations: 648 },
             { name: "Nur Büyükpınarbaşılı", institution: "Sağlık Bilimleri University", citations: 621 },
             { name: "Filiz Özyilmaz", institution: "Trakya Üniversitesi Tıp Fakültesi, Patoloji", citations: 609 },
@@ -215,12 +214,12 @@
             { name: "Mustafa Kemal Çiftçi", institution: "İstanbul Gelişim Üniversitesi", citations: 544 },
             { name: "Nesrin Uygun", institution: "professor of pathology", citations: 526 },
             { name: "Mehmet Reşat Özercan", institution: "Adıyaman Üniversitesi Tıbbi Patoloji", citations: 502 },
-            { name: "Nuray Kepil", institution: "IUC-Cerrahpasa, Pathology", citations: 506 }, // Re-order
+            { name: "Nuray Kepil", institution: "IUC-Cerrahpasa, Pathology", citations: 506 },
             { name: "Arzu Avcı", institution: "İzmir Tınaztepe Üniversitesi Tıp Fakültesi", citations: 500 },
             { name: "Kadriye Yıldız", institution: "Karadeniz Teknik Üniversitesi Patoloji", citations: 494 },
             { name: "Irem Onur", institution: "IUC-Cerrahpasa", citations: 482 },
             { name: "Cuyan Demirkensen", institution: "Professor of Pathology", citations: 481 },
-            { name: "Saadet Alan", institution: "İnönü Üniversitesi Tıp Fakültesi Tıbbi Patoloji", citations: 474 }, // Re-order
+            { name: "Saadet Alan", institution: "İnönü Üniversitesi Tıp Fakültesi Tıbbi Patoloji", citations: 474 },
             { name: "Fahriye Kilinc", institution: "Necmettin Erbakan University", citations: 469 },
             { name: "Gülzade Karaman", institution: "Özel Biyotıp Patoloji Laboratuvarı", citations: 469 },
             { name: "Yasemen Adalı Ruşen", institution: "İzmir Demokrasi Üniversitesi Tıp Fakültesi Tıbbi Patoloji", citations: 463 },
@@ -248,7 +247,7 @@
             { name: "Remzi Arslan", institution: "Atatürk Üniversitesi Tıp Fakültesi Patoloji", citations: 238 },
             { name: "Onur Ceylan", institution: "Ataturk University, Faculty of Medicine", citations: 225 },
             { name: "Meral Uner", institution: "Hacettepe U. Pathology Depart.", citations: 222 },
-            { name: "Davut Şahin", institution: "Acıbadem Üniversitesi", citations: 222 }, // Re-order
+            { name: "Davut Şahin", institution: "Acıbadem Üniversitesi", citations: 222 },
             { name: "Saygın I", institution: "KTÜ Tıp Fakültesi Patoloji", citations: 206 },
             { name: "Arzu Yıldırım ÖzlüK", institution: "Balıkesir Üniversitesi Tıp Fakültesi", citations: 198 },
             { name: "Ahu Senem Demiröz", institution: "Cerrahpaşa Tıp Fakültesi, İstanbul Üniversitesi-Cerrahpaşa", citations: 196 },
