--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
         let data = [
             { name: "Volkan Adsay", institution: "Koç University", citations: 57196 },
             { name: "Ayse Ayhan", institution: "Hacettepe Üniversitesi", citations: 9392 },
-            { name: "Alp Usubutun", institution: "Hacettepe Üniversitesi", citations: 7785 },
-            { name: "Ibrahim Hanifi Ozercan", institution: "Fırat Üniversitesi Tıp Fakültesi", citations: 7227 },
-            { name: "Sulen Sarioglu", institution: "Dokuz Eylül Üniversitesi", citations: 3552 },
+            { name: "Alp Usubütün", institution: "Hacettepe Üniversitesi", citations: 7785 },
+            { name: "Ibrahim Hanifi Özercan", institution: "Fırat Üniversitesi Tıp Fakültesi", citations: 7227 },
+            { name: "Sulen Sarıoğlu", institution: "Dokuz Eylül Üniversitesi", citations: 3552 },
             { name: "Merva Soluk Tekkesin", institution: "Ankara University", citations: 3404 },
             { name: "Funda Yılmaz", institution: "Ege Üniversitesi Tıp Fakültesi", citations: 3401 },
             { name: "Pelin Bağcı", institution: "Marmara Üniversitesi Tıp Fakültesi Patoloji", citations: 3340 },
@@ -150,11 +150,11 @@
             { name: "Murat Alper", institution: "Sağlık Bilimleri Üniversitesi, Ankara Etlik Şehir Hastanesi", citations: 3211 }, 
             { name: "Ozlem Erdem", institution: "Gazi University", citations: 2697 },
             { name: "Özlem Yapıcıer", institution: "Bahçeşehir Üniversitesi Tıp Fakültesi", citations: 2693 },
-            { name: "Osman Zekioglu", institution: "Ege Üniversitesi Tıp Fakültesi Tıbbi Patoloji", citations: 2687 },
+            { name: "Osman Zekioğlu", institution: "Ege Üniversitesi Tıp Fakültesi Tıbbi Patoloji", citations: 2687 },
             { name: "Enver Vardar", institution: "Patoloji", citations: 2612 },
-            { name: "Buyukbabani Nesimi", institution: "İstanbul Üniversitesi İstanbul Tıp Fakültesi Patoloji", citations: 2517 },
+            { name: "Nesimi Büyükbabani", institution: "İstanbul Üniversitesi İstanbul Tıp Fakültesi Patoloji", citations: 2517 },
             { name: "Bulent Celasun", institution: "Gülhane Askeri Tıp Akademisi, Başkent Üniversitesi Tıp Fakültesi", citations: 2147 },
-            { name: "Leyla Memis", institution: "Gazi Tıp Fakültesi Tıbbi Patoloji", citations: 2105 },
+            { name: "Leyla Memiş", institution: "Gazi Tıp Fakültesi Tıbbi Patoloji", citations: 2105 },
             { name: "Fahri Yılmaz", institution: "SAEH Tıbbi Patoloji", citations: 2052 },
             { name: "Metin Çiriş", institution: "Süleyman Demirel Üniversitesi Tıp Fakültesi Tıbbi Patoloji", citations: 2033 },
             { name: "Figen Barut", institution: "Zonguldak Bülent Ecevit Üniversitesi Tıp Fakültesi", citations: 1977 },
@@ -162,33 +162,33 @@
             { name: "Şahsine Tolunay", institution: "Uludağ Üniversitesi Tıp Fakültesi", citations: 1942 },
             { name: "Aytekin Akyol", institution: "Hacettepe University", citations: 1869 },
             { name: "Nevra Dursun", institution: "University of Health Sciences", citations: 1851 },
-            { name: "Cenk Sokmensuer", institution: "Hacettepe University", citations: 1847 },
-            { name: "Emine Turkmen Samdanci", institution: "Gazi University", citations: 1790 },
+            { name: "Cenk Sökmensüer", institution: "Hacettepe University", citations: 1847 },
+            { name: "Emine Türkmen Şamdancı", institution: "Gazi University", citations: 1790 },
             { name: "Figen Öztürk", institution: "Erciyes Üniversitesi Patoloji", citations: 1760 },
-            { name: "Burak Bahadir", institution: "Zonguldak Bülent Ecevit Üniversitesi Tıp Fakültesi", citations: 1701 },
+            { name: "Burak Bahadır", institution: "Zonguldak Bülent Ecevit Üniversitesi Tıp Fakültesi", citations: 1701 },
             { name: "Süheyla Uyar Bozkurt", institution: "Istinye University", citations: 1582 },
-            { name: "Banu Dogan Gun", institution: "Bülent Ecevit University", citations: 1573 },
-            { name: "Sibel Yenidunya", institution: "Sağlık Bilimleri University", citations: 1550 },
-            { name: "Gunes Guner", institution: "Hacettepe U. Medical Faculty", citations: 1547 },
+            { name: "Banu Doğan Gün", institution: "Bülent Ecevit University", citations: 1573 },
+            { name: "Sibel Yenidünya", institution: "Sağlık Bilimleri University", citations: 1550 },
+            { name: "Guneş Güner", institution: "Hacettepe U. Medical Faculty", citations: 1547 },
             { name: "Banu Lebe", institution: "Professor of Pathology", citations: 1531 },
-            { name: "Tulay Canda", institution: "Professor of Medicine in Pathology", citations: 1511 },
+            { name: "Tülay Canda", institution: "Professor of Medicine in Pathology", citations: 1511 },
             { name: "Fatma Hüsniye Dilek", institution: "İzmir Katip Çelebi Üniversitesi Tıp Fakültesi", citations: 1483 },
             { name: "Aylar Poyraz", institution: "Gazi Üniversitesi Tıp Fakültesi Tıbbi Patoloji", citations: 1422 },
-            { name: "Nese Demirkan", institution: "Pamukkale Üniversitesi", citations: 1385 },
-            { name: "Demet Sengul", institution: "Giresun University", citations: 1377 },
+            { name: "Neşe Demirkan", institution: "Pamukkale Üniversitesi", citations: 1385 },
+            { name: "Demet Şengül", institution: "Giresun University", citations: 1377 },
             { name: "Mustafa Kösem", institution: "Sakarya Üniversitesi", citations: 1307 },
             { name: "Cumhur İbrahim Başsorgun", institution: "Akdeniz Üniversitesi Tıp Fakültesi", citations: 1281 },
             { name: "Metin Akbulut", institution: "Pamukkale Üniversitesi", citations: 1204 },
             { name: "Burcu Tokozlu (Senguven)", institution: "Gazi University", citations: 1176 },
             { name: "Nilüfer Onak Kandemir", institution: "Ankara Şehir Hastanesi Tıbbi Patoloji", citations: 1252 },
             { name: "Mine Hekimgil", institution: "Ege Üniversitesi Tıp Fakültesi, Tıbbi Patoloji", citations: 1147 },
-            { name: "Fulya Oz Puyan", institution: "Trakya Üniversitesi Tıp Fakültesi Patoloji", citations: 1125 },
+            { name: "Fulya Öz Puyan", institution: "Trakya Üniversitesi Tıp Fakültesi Patoloji", citations: 1125 },
             { name: "Neşe Karadağ", institution: "İnönü Üniversitesi Tıp Fakültesi", citations: 1095 },
             { name: "Olgun Kontaş", institution: "Erciyes Üniversitesi Tıp Fakültesi Patoloji", citations: 1042 },
             { name: "Dilek Yavuzer", institution: "Sağlık Bilimleri Üniversitesi", citations: 995 },
             { name: "Betül Gündoğdu", institution: "Atatürk Üniversitesi Tıp Fakültesi Tıbbi Patoloji", citations: 951 },
             { name: "Tülin Yalta", institution: "Trakya Üniversitesi Patoloji", citations: 947 },
-            { name: "Mehtat Unlu", institution: "Dokuz Eylul University", citations: 917 },
+            { name: "Mehtat Ünlü", institution: "Dokuz Eylul University", citations: 917 },
             { name: "Kayhan Başak", institution: "Sağlık Bilimleri Üniversitesi, Kartal Dr. Lütfi Kırdar Şehir Hastanesi", citations: 922 },
             { name: "Yurdanur Sullu", institution: "Ondokuz Mayıs Üniversitesi Tıp Fakültesi Patoloji", citations: 919 },
             { name: "Mehmet Yaldız", institution: "Mersin Üniversitesi Tıp Fakültesi", citations: 911 },
@@ -198,15 +198,15 @@
             { name: "Recep Bedir", institution: "Recep Tayyip Erdoğan Üniversitesi, Tıp Fakültesi Tıbbi Patoloji", citations: 816 },
             { name: "Sare Şipal", institution: "Atatürk Üniversitesi Tıp Fakültesi Patoloji", citations: 782 },
             { name: "Banu Yaman", institution: "Ege University", citations: 777 },
-            { name: "Sirin Baspinar", institution: "Süleyman Demirel Üniversitesi Tıp Fakültesi, Tıbbi Patoloji", citations: 750 },
+            { name: "Şirin Başpınar", institution: "Süleyman Demirel Üniversitesi Tıp Fakültesi, Tıbbi Patoloji", citations: 750 },
             { name: "Sıdıka Fındık", institution: "Necmettin Erbakan Üniversitesi Meram Tıp Fakültesi Tıbbi Patoloji", citations: 744 },
-            { name: "Armagan Gunal", institution: "Sağlık Bilimleri Üniversitesi Tıbbi Patoloji", citations: 731 },
+            { name: "Armağan Gunal", institution: "Sağlık Bilimleri Üniversitesi Tıbbi Patoloji", citations: 731 },
             { name: "Ersin Tuncer", institution: "Sivas Cumhuriyet Üniversitesi Tıp Fakültesi", citations: 667 },
             { name: "Eren Altun", institution: "Istanbul Bağcılar Training and Research Hospital", citations: 641 },
             { name: "Nagihan Yalçın", institution: "Pamukkale Üniversitesi", citations: 651 },
             { name: "Ünsal Han", institution: "Dışkapı Ankara YB Eğitim Araştırma Hastanesi", citations: 648 },
             { name: "Nur Büyükpınarbaşılı", institution: "Sağlık Bilimleri University", citations: 621 },
-            { name: "Filiz Özyilmaz", institution: "Trakya Üniversitesi Tıp Fakültesi, Patoloji", citations: 609 },
+            { name: "Filiz Özyılmaz", institution: "Trakya Üniversitesi Tıp Fakültesi, Patoloji", citations: 609 },
             { name: "Erdogdu İh", institution: "Aydın Adnan Menderes Üniversitesi Patoloji", citations: 607 },
             { name: "Mehmet Akif Çiftcioğlu", institution: "Çiftcioğlu Patoloji Merkezi", citations: 583 },
             { name: "Hasan Gökçe", institution: "İnönü Üniversitesi Patoloji", citations: 574 },
@@ -220,7 +220,7 @@
             { name: "Irem Onur", institution: "IUC-Cerrahpasa", citations: 482 },
             { name: "Cuyan Demirkensen", institution: "Professor of Pathology", citations: 481 },
             { name: "Saadet Alan", institution: "İnönü Üniversitesi Tıp Fakültesi Tıbbi Patoloji", citations: 474 },
-            { name: "Fahriye Kilinc", institution: "Necmettin Erbakan University", citations: 469 },
+            { name: "Fahriye Kılınç", institution: "Necmettin Erbakan University", citations: 469 },
             { name: "Gülzade Karaman", institution: "Özel Biyotıp Patoloji Laboratuvarı", citations: 469 },
             { name: "Yasemen Adalı Ruşen", institution: "İzmir Demokrasi Üniversitesi Tıp Fakültesi Tıbbi Patoloji", citations: 463 },
             { name: "Anil Aysal", institution: "Dokuz Eylül Üniversitesi Tıp Fakültesi Tıbbi Patoloji", citations: 454 },
@@ -248,7 +248,7 @@
             { name: "Onur Ceylan", institution: "Ataturk University, Faculty of Medicine", citations: 225 },
             { name: "Meral Uner", institution: "Hacettepe U. Pathology Depart.", citations: 222 },
             { name: "Davut Şahin", institution: "Acıbadem Üniversitesi", citations: 222 },
-            { name: "Saygın I", institution: "KTÜ Tıp Fakültesi Patoloji", citations: 206 },
+            { name: "Saygın İsmail", institution: "KTÜ Tıp Fakültesi Patoloji", citations: 206 },
             { name: "Arzu Yıldırım ÖzlüK", institution: "Balıkesir Üniversitesi Tıp Fakültesi", citations: 198 },
             { name: "Ahu Senem Demiröz", institution: "Cerrahpaşa Tıp Fakültesi, İstanbul Üniversitesi-Cerrahpaşa", citations: 196 },
             { name: "Bedriye Nazli Erkencioglu", institution: "İstinye Üniversitesi", citations: 188 },
@@ -263,7 +263,7 @@
             { name: "Bahattin Erdoğan", institution: "Eskişehir Şehir Hastanesi", citations: 118 },
             { name: "Meltem Azatcam", institution: "Lüleburgaz Devlet Hastanesi Tıbbi Patoloji", citations: 118 },
             { name: "Gamze Erkılınç", institution: "İzmir Bakırçay Üniversitesi Tıp Fakültesi", citations: 101 },
-            { name: "Murat Aydin Sav", institution: "Yeditepe University", citations: 99 },
+            { name: "Murat Aydın Sav", institution: "Yeditepe University", citations: 99 },
             { name: "Olcay Kurtulan", institution: "Hacettepe University", citations: 98 },
             { name: "Havva Hande Keser Sahin", institution: "Hitit University", citations: 97 },
             { name: "Şenay Erdoğan Durmuş", institution: "Sitopatoloji Yandal Uzmanı", citations: 94 },
