--- a/index.html
+++ b/index.html
@@ -139,21 +139,21 @@
         // Sağlanan veriler ve yeni eklemelerle oluşturulan birleşik liste
         let data = [
             { name: "Volkan Adsay", institution: "Koç University", citations: 57196 },
-            { name: "Ayse Ayhan", institution: "Hacettepe Üniversitesi", citations: 9392 },
+            { name: "Ayşe Ayhan", institution: "Hacettepe Üniversitesi", citations: 9392 },
             { name: "Alp Usubütün", institution: "Hacettepe Üniversitesi", citations: 7785 },
-            { name: "Ibrahim Hanifi Özercan", institution: "Fırat Üniversitesi Tıp Fakültesi", citations: 7227 },
-            { name: "Sulen Sarıoğlu", institution: "Dokuz Eylül Üniversitesi", citations: 3552 },
+            { name: "İbrahim Hanifi Özercan", institution: "Fırat Üniversitesi Tıp Fakültesi", citations: 7227 },
+            { name: "Sülen Sarıoğlu", institution: "Dokuz Eylül Üniversitesi", citations: 3552 },
             { name: "Merva Soluk Tekkesin", institution: "Ankara University", citations: 3404 },
             { name: "Funda Yılmaz", institution: "Ege Üniversitesi Tıp Fakültesi", citations: 3401 },
             { name: "Pelin Bağcı", institution: "Marmara Üniversitesi Tıp Fakültesi Patoloji", citations: 3340 },
             { name: "Kemal Deniz", institution: "Erciyes University", citations: 3133 },
             { name: "Murat Alper", institution: "Sağlık Bilimleri Üniversitesi, Ankara Etlik Şehir Hastanesi", citations: 3211 }, 
-            { name: "Ozlem Erdem", institution: "Gazi University", citations: 2697 },
+            { name: "Özlem Erdem", institution: "Gazi University", citations: 2697 },
             { name: "Özlem Yapıcıer", institution: "Bahçeşehir Üniversitesi Tıp Fakültesi", citations: 2693 },
             { name: "Osman Zekioğlu", institution: "Ege Üniversitesi Tıp Fakültesi Tıbbi Patoloji", citations: 2687 },
             { name: "Enver Vardar", institution: "Patoloji", citations: 2612 },
             { name: "Nesimi Büyükbabani", institution: "İstanbul Üniversitesi İstanbul Tıp Fakültesi Patoloji", citations: 2517 },
-            { name: "Bulent Celasun", institution: "Gülhane Askeri Tıp Akademisi, Başkent Üniversitesi Tıp Fakültesi", citations: 2147 },
+            { name: "Bülent Celasun", institution: "Gülhane Askeri Tıp Akademisi, Başkent Üniversitesi Tıp Fakültesi", citations: 2147 },
             { name: "Leyla Memiş", institution: "Gazi Tıp Fakültesi Tıbbi Patoloji", citations: 2105 },
             { name: "Fahri Yılmaz", institution: "SAEH Tıbbi Patoloji", citations: 2052 },
             { name: "Metin Çiriş", institution: "Süleyman Demirel Üniversitesi Tıp Fakültesi Tıbbi Patoloji", citations: 2033 },
@@ -169,7 +169,7 @@
             { name: "Süheyla Uyar Bozkurt", institution: "Istinye University", citations: 1582 },
             { name: "Banu Doğan Gün", institution: "Bülent Ecevit University", citations: 1573 },
             { name: "Sibel Yenidünya", institution: "Sağlık Bilimleri University", citations: 1550 },
-            { name: "Guneş Güner", institution: "Hacettepe U. Medical Faculty", citations: 1547 },
+            { name: "Güneş Güner", institution: "Hacettepe U. Medical Faculty", citations: 1547 },
             { name: "Banu Lebe", institution: "Professor of Pathology", citations: 1531 },
             { name: "Tülay Canda", institution: "Professor of Medicine in Pathology", citations: 1511 },
             { name: "Fatma Hüsniye Dilek", institution: "İzmir Katip Çelebi Üniversitesi Tıp Fakültesi", citations: 1483 },
@@ -179,7 +179,7 @@
             { name: "Mustafa Kösem", institution: "Sakarya Üniversitesi", citations: 1307 },
             { name: "Cumhur İbrahim Başsorgun", institution: "Akdeniz Üniversitesi Tıp Fakültesi", citations: 1281 },
             { name: "Metin Akbulut", institution: "Pamukkale Üniversitesi", citations: 1204 },
-            { name: "Burcu Tokozlu (Senguven)", institution: "Gazi University", citations: 1176 },
+            { name: "Burcu Toközlü (Şengüven)", institution: "Gazi University", citations: 1176 },
             { name: "Nilüfer Onak Kandemir", institution: "Ankara Şehir Hastanesi Tıbbi Patoloji", citations: 1252 },
             { name: "Mine Hekimgil", institution: "Ege Üniversitesi Tıp Fakültesi, Tıbbi Patoloji", citations: 1147 },
             { name: "Fulya Öz Puyan", institution: "Trakya Üniversitesi Tıp Fakültesi Patoloji", citations: 1125 },
@@ -200,14 +200,14 @@
             { name: "Banu Yaman", institution: "Ege University", citations: 777 },
             { name: "Şirin Başpınar", institution: "Süleyman Demirel Üniversitesi Tıp Fakültesi, Tıbbi Patoloji", citations: 750 },
             { name: "Sıdıka Fındık", institution: "Necmettin Erbakan Üniversitesi Meram Tıp Fakültesi Tıbbi Patoloji", citations: 744 },
-            { name: "Armağan Gunal", institution: "Sağlık Bilimleri Üniversitesi Tıbbi Patoloji", citations: 731 },
+            { name: "Armağan Günal", institution: "Sağlık Bilimleri Üniversitesi Tıbbi Patoloji", citations: 731 },
             { name: "Ersin Tuncer", institution: "Sivas Cumhuriyet Üniversitesi Tıp Fakültesi", citations: 667 },
             { name: "Eren Altun", institution: "Istanbul Bağcılar Training and Research Hospital", citations: 641 },
             { name: "Nagihan Yalçın", institution: "Pamukkale Üniversitesi", citations: 651 },
             { name: "Ünsal Han", institution: "Dışkapı Ankara YB Eğitim Araştırma Hastanesi", citations: 648 },
             { name: "Nur Büyükpınarbaşılı", institution: "Sağlık Bilimleri University", citations: 621 },
             { name: "Filiz Özyılmaz", institution: "Trakya Üniversitesi Tıp Fakültesi, Patoloji", citations: 609 },
-            { name: "Erdogdu İh", institution: "Aydın Adnan Menderes Üniversitesi Patoloji", citations: 607 },
+            { name: "İbrahim Halil Erdoğdu", institution: "Aydın Adnan Menderes Üniversitesi Patoloji", citations: 607 },
             { name: "Mehmet Akif Çiftcioğlu", institution: "Çiftcioğlu Patoloji Merkezi", citations: 583 },
             { name: "Hasan Gökçe", institution: "İnönü Üniversitesi Patoloji", citations: 574 },
             { name: "Ramazan Uçak", institution: "SBÜ Şişli Hamidiye Etfal SUAM Patoloji Bölümü", citations: 554 },
@@ -217,18 +217,18 @@
             { name: "Nuray Kepil", institution: "IUC-Cerrahpasa, Pathology", citations: 506 },
             { name: "Arzu Avcı", institution: "İzmir Tınaztepe Üniversitesi Tıp Fakültesi", citations: 500 },
             { name: "Kadriye Yıldız", institution: "Karadeniz Teknik Üniversitesi Patoloji", citations: 494 },
-            { name: "Irem Onur", institution: "IUC-Cerrahpasa", citations: 482 },
-            { name: "Cuyan Demirkensen", institution: "Professor of Pathology", citations: 481 },
+            { name: "İrem Onur", institution: "IUC-Cerrahpasa", citations: 482 },
+            { name: "Cüyan Demirkesen", institution: "Professor of Pathology", citations: 481 },
             { name: "Saadet Alan", institution: "İnönü Üniversitesi Tıp Fakültesi Tıbbi Patoloji", citations: 474 },
             { name: "Fahriye Kılınç", institution: "Necmettin Erbakan University", citations: 469 },
             { name: "Gülzade Karaman", institution: "Özel Biyotıp Patoloji Laboratuvarı", citations: 469 },
             { name: "Yasemen Adalı Ruşen", institution: "İzmir Demokrasi Üniversitesi Tıp Fakültesi Tıbbi Patoloji", citations: 463 },
-            { name: "Anil Aysal", institution: "Dokuz Eylül Üniversitesi Tıp Fakültesi Tıbbi Patoloji", citations: 454 },
+            { name: "Anıl Aysal", institution: "Dokuz Eylül Üniversitesi Tıp Fakültesi Tıbbi Patoloji", citations: 454 },
             { name: "Pınar Celepli", institution: "Sağlık Bakanlığı Gülhane Eğitim ve Araştırma Hastanesi", citations: 448 },
-            { name: "Gulname Findik Guvendi", institution: "Recep Tayyip Erdoğan Üniversitesi Tıp Fakültesi Patoloji", citations: 445 },
+            { name: "Gulname Fındık Güvendi", institution: "Recep Tayyip Erdoğan Üniversitesi Tıp Fakültesi Patoloji", citations: 445 },
             { name: "Pelin Yıldız", institution: "Acıbadem Üniversitesi, Patoloji Bölümü", citations: 443 },
             { name: "Emel Çakır", institution: "Karadeniz Teknik Üniversitesi Tıp Fakültesi Patoloji", citations: 441 },
-            { name: "Servet Guresci", institution: "Ankara Bilkent Şehir Hastanesi", citations: 435 },
+            { name: "Servet Güreşçi", institution: "Ankara Bilkent Şehir Hastanesi", citations: 435 },
             { name: "Büşra Yaprak Bayrak", institution: "Kocaeli Üniversitesi Tıp Fakültesi Patoloji", citations: 413 },
             { name: "Sevinç Çelik Şahin", institution: "KEYKUBAT ÜNİVERSİTESİ TIP FAKÜLTESİ", citations: 408 },
             { name: "Serra Kayaçetin", institution: "Ankara Atatürk Eğitim ve Araştırma Hastanesi", citations: 386 },
@@ -242,42 +242,42 @@
             { name: "Aydın İsişag", institution: "Manisa Celal Bayar Üniversitesi Tıp Fakültesi Tıbbi Patoloji", citations: 279 },
             { name: "Uguray Payam Hacisalihoglu", institution: "İstanbul Aydın Üniversitesi Tıp Fakültesi", citations: 271 },
             { name: "Serhat Toprak", institution: "İnönü üniversitesi Tıp Fakültesi", citations: 266 },
-            { name: "Akgül Arici", institution: "Tokat Gaziosmanpaşa Üniversitesi Tıp Fakültesi Tıbbi Patoloji", citations: 253 },
+            { name: "Akgül Arıcı", institution: "Tokat Gaziosmanpaşa Üniversitesi Tıp Fakültesi Tıbbi Patoloji", citations: 253 },
             { name: "Yetkin Ağaçkıran", institution: "SBÜ. Patoloji", citations: 242 },
             { name: "Remzi Arslan", institution: "Atatürk Üniversitesi Tıp Fakültesi Patoloji", citations: 238 },
             { name: "Onur Ceylan", institution: "Ataturk University, Faculty of Medicine", citations: 225 },
-            { name: "Meral Uner", institution: "Hacettepe U. Pathology Depart.", citations: 222 },
+            { name: "Meral Üner", institution: "Hacettepe U. Pathology Depart.", citations: 222 },
             { name: "Davut Şahin", institution: "Acıbadem Üniversitesi", citations: 222 },
-            { name: "Saygın İsmail", institution: "KTÜ Tıp Fakültesi Patoloji", citations: 206 },
+            { name: "Saygın I", institution: "KTÜ Tıp Fakültesi Patoloji", citations: 206 },
             { name: "Arzu Yıldırım ÖzlüK", institution: "Balıkesir Üniversitesi Tıp Fakültesi", citations: 198 },
             { name: "Ahu Senem Demiröz", institution: "Cerrahpaşa Tıp Fakültesi, İstanbul Üniversitesi-Cerrahpaşa", citations: 196 },
-            { name: "Bedriye Nazli Erkencioglu", institution: "İstinye Üniversitesi", citations: 188 },
-            { name: "Seda Gun", institution: "Ondokuz Mayıs Üniversitesi Patoloji", citations: 182 },
+            { name: "Bedriye Nazlı Erkencioglu", institution: "İstinye Üniversitesi", citations: 188 },
+            { name: "Seda Gün", institution: "Ondokuz Mayıs Üniversitesi Patoloji", citations: 182 },
             { name: "Meryem İlkay Eren Karanis", institution: "Konya Şehir Hastanesi", citations: 173 },
             { name: "Mahir Tayfur", institution: "Erzincan Binali Yıldırım Üniversitesi", citations: 165 },
-            { name: "Berrin Buyukeren Babaoglu", institution: "Hacettepe U. Pathology Depart.", citations: 146 },
+            { name: "Berrin Büyükören Babaoğlu", institution: "Hacettepe U. Pathology Depart.", citations: 146 },
             { name: "Leyla Tekin", institution: "Muğla Sıtkı Koçman Üniversitesi Patoloji", citations: 146 },
             { name: "Erdem Comut", institution: "Pamukkale University", citations: 142 },
-            { name: "Eruyar AT", institution: "Kocaeli Üniversitesi Tıp Fakültesi Patoloji", citations: 135 },
+            { name: "Eruyar At", institution: "Kocaeli Üniversitesi Tıp Fakültesi Patoloji", citations: 135 },
             { name: "Deniz Çavuşoğlu", institution: "Etlik Zübeyde Hanım Kadın Hastalıkları EA Hastanesi", citations: 123 },
             { name: "Bahattin Erdoğan", institution: "Eskişehir Şehir Hastanesi", citations: 118 },
             { name: "Meltem Azatcam", institution: "Lüleburgaz Devlet Hastanesi Tıbbi Patoloji", citations: 118 },
             { name: "Gamze Erkılınç", institution: "İzmir Bakırçay Üniversitesi Tıp Fakültesi", citations: 101 },
             { name: "Murat Aydın Sav", institution: "Yeditepe University", citations: 99 },
             { name: "Olcay Kurtulan", institution: "Hacettepe University", citations: 98 },
-            { name: "Havva Hande Keser Sahin", institution: "Hitit University", citations: 97 },
+            { name: "Havva Hande Keser Şahin", institution: "Hitit University", citations: 97 },
             { name: "Şenay Erdoğan Durmuş", institution: "Sitopatoloji Yandal Uzmanı", citations: 94 },
             { name: "Zeynep Sağnak Yılmaz", institution: "Karadeniz Teknik Üniversitesi Tıp Fakültesi", citations: 78 },
             { name: "Fatma Zeynep Özen", institution: "Amasya Üniversitesi", citations: 65 },
-            { name: "Özge Basaran Aydogdu", institution: "Ankara Şehir Hastanesi Tıbbi Patoloji", citations: 60 },
+            { name: "Özge Başaran Aydoğdu", institution: "Ankara Şehir Hastanesi Tıbbi Patoloji", citations: 60 },
             { name: "Rabia Demirtaş", institution: "Atatürk Üniversitesi Tıp Fakültesi Patoloji", citations: 56 },
             { name: "Ufkay Karabay", institution: "İzmir Tınaztepe Üniversitesi Sağlık Hizmetleri MYO", citations: 56 },
             { name: "Gökçe Hande Çavuş", institution: "Cerrahpaşa Tıp Fakültesi Patoloji", citations: 54 },
             { name: "Emel Tekin", institution: "Eskişehir Osmangazi University", citations: 47 },
-            { name: "Yasemin Akca", institution: "Gaziantep Islam Science and Technology University", citations: 32 },
-            { name: "Tulay Koc", institution: "Cumhuriyet University", citations: 31 },
+            { name: "Yasemin Akça", institution: "Gaziantep Islam Science and Technology University", citations: 32 },
+            { name: "Tülay Koç", institution: "Cumhuriyet University", citations: 31 },
             { name: "Ezgi Dicle Serbes", institution: "Ankara University", citations: 30 },
-            { name: "Deniz Baycelebi", institution: "Ondokuz Mayıs University Faculty of Medicine", citations: 25 },
+            { name: "Deniz Bayçelebi", institution: "Ondokuz Mayıs University Faculty of Medicine", citations: 25 },
         ];
         
         // Atıf sayısına göre büyükten küçüğe sıralama
